[gd_scene load_steps=7 format=3 uid="uid://dy37y8yc2nwaf"]

[ext_resource type="Script" uid="uid://dwpcc7wy5kgl8" path="res://scripts/teamsoverlay.gd" id="1_51604"]
[ext_resource type="Script" uid="uid://be8tq0hpqc3x2" path="res://scripts/upgradesmenu.gd" id="2_jq6en"]

[sub_resource type="LabelSettings" id="LabelSettings_cc1ly"]

[sub_resource type="LabelSettings" id="LabelSettings_w8v0e"]

[sub_resource type="LabelSettings" id="LabelSettings_4qndg"]

[sub_resource type="LabelSettings" id="LabelSettings_b0x50"]

[node name="Teamsoverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("1_51604")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 11.0
offset_right = 882.0
offset_bottom = 51.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_cc1ly")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_w8v0e")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_4qndg")

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_b0x50")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 272.0
offset_top = 15.0
offset_right = 280.0
offset_bottom = 23.0
text = "Restart Battle"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 17.0
offset_right = 428.0
offset_bottom = 25.0
text = "Sacrifice Green"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 602.0
offset_top = 17.0
offset_right = 684.0
offset_bottom = 48.0
text = "Upgrades"

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 951.0
offset_top = 17.0
offset_right = 991.0
offset_bottom = 40.0

[node name="Upgradesmenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 573.0
offset_top = 398.0
offset_right = 1148.0
offset_bottom = 646.0
script = ExtResource("2_jq6en")

[node name="TabBar" type="TabBar" parent="Upgradesmenu"]
layout_mode = 2
current_tab = 0
tab_count = 3
tab_0/title = "melee upgrades"
tab_1/title = "archer upgrades"
tab_2/title = "flanker upgrades"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="tab_changed" from="Upgradesmenu/TabBar" to="Upgradesmenu" method="_on_tab_bar_tab_changed"]
